<resources>
    <string name="app_name">How I Spend</string>


    <!--CONSTANTS-->
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma password</string>
    <string name="annulla">Annulla</string>
    <string name="avanti">Avanti</string>
    <string name="indietro">Indietro</string>

    <!--LOGIN-->

    <string name="login_title">Accedi</string>
    <string name="login_subtitle">Inserisci le tue credenziali</string>
    <string name="crea_un_account">Crea un account</string>
    <string name="title_activity_home">HomeActivity</string>


    <!--NUOVO UTENTE-->
    <string name="nuovo_utente_title">Registrazione</string>
    <string name="nuovo_utente_subtitle">Inserisci le informazioni richieste</string>
    <string name="crea_utente">Crea utente</string>


    <!--DRAWER MENU AND BOTTOM NAVIGATION-->
    <string name="profilo">Profilo</string>
    <string name="esci">Esci</string>
    <string name="apri">Apri</string>
    <string name="chiudi">Chiudi</string>
    <string name="home">Home</string>
    <string name="insight">Insight</string>
    <string name="cerca">Cerca</string>


    <!--PROFILO-->
    <string name="nomeMaiusc">NOME</string>
    <string name="cognomeMaiusc">COGNOME</string>
    <string name="contatti">Contatti</string>
    <string name="emailMaiusc">EMAIL</string>
    <string name="passwordMaiusc">PASSWORD</string>


    <!--DIALOG CAMBIO PASSWORD-->
    <string name="vecchia_password">Vecchia password</string>
    <string name="nuova_password">Nuova password</string>


    <!--MESE-->
    <string name="rimanenzeMaiusc">RIMANENZE</string>
    <string name="speseMaiusc">SPESE</string>
    <string name="introiti">Introiti</string>
    <string name="introiti_facoltativo">Inserisci gli Introiti (Facoltativo)</string>
    <string name="labelSelezionaMese">Seleziona il mese da aggiungere</string>
    <string name="spese">Spese</string>
    <string name="saldo">Saldo</string>
    <string name="n_entrate">N° di Entrate</string>
    <string name="n_uscite">N° di Uscite</string>


    <!--DETTAGLIO MESE-->
    <string name="dettaglio_mese">Dettagli</string>
    <string name="lista_operazioni">Operazioni</string>



    <!--ANNO-->
    <string name="annoLabel">Anno</string>



    <!--RICERCA HOME-->
    <string name="importo">Importo</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="guadagno">Guadagno</string>
    <string name="spesa">Spesa</string>

</resources>
