<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--VECCHIA PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vecchia_password"
        style="@style/inputField"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vecchiaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            style="@style/passwordInputText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- NUOVA PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nuova_password"
        style="@style/inputField"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nuovaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            style="@style/passwordInputText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--CONFERMA PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conferma_password"
        style="@style/inputField"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confermaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            style="@style/passwordInputText"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>